# signalpilot

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
.cursor/rules/: core.mdc
.github/workflows/: ci.yml  release.yml
deploy/: signalpilot-rbac.yaml
deploy/samples/: 01-oom.yaml  02-cpu-throttle.yaml  03-crashloop.yaml  04-imagepull.yaml  05-probe-fail.yaml  06-unschedulable.yaml  07-regression-v1.yaml  07-regression-v2.yaml  08-slow-transaction.yaml  09-dns-failure.yaml  10-load-generator.yaml  11-memory-leak.yaml  12-cascading-failure.yaml  13-configmap-missing.yaml  14-init-container-fail.yaml  15-latency-prometheus.yaml  16-git-correlation-demo.yaml
docs/: PYPI_PUBLISHING.md
docs/superpowers/plans/: 2026-06-12-live-testing-evidence.md
docs/superpowers/specs/: 2026-06-04-signalpilot-design.md
evidence/: README.md
examples/: README.md  sample-report.html
scripts/: audit_evidence.py  capture_all_evidence.sh  reset_scenarios.sh  run_e2e.sh  setup_test.sh
src/signalpilot/: __init__.py  __main__.py  cli.py  config.py  deepdive.py  models.py  timeline.py  topology.py
src/signalpilot/analysis/: __init__.py  logs.py
src/signalpilot/collectors/: __init__.py  base.py  cadvisor.py  deploy.py  events.py  git.py  kube_api.py  logs.py  loki.py  metrics_server.py  network.py  otel_traces.py  prometheus.py  registry.py
src/signalpilot/detect/: __init__.py  changes.py  regression.py
src/signalpilot/integrations/: __init__.py  gate.py  slack.py
src/signalpilot/narrate/: __init__.py  llm.py  template.py
src/signalpilot/rca/: __init__.py  engine.py  rules.py  scoring.py
src/signalpilot/report/: __init__.py  html.py
src/signalpilot/report/templates/: report.html.j2
src/signalpilot/verification/: store.py
src/signalpilot/web/: __init__.py  app.py
tests/: conftest.py
tests/e2e/: test_e2e_scenarios.py
tests/fixtures/k8s/: events_warnings.json  metrics_pods.json  pods_crashloop.json  pods_healthy.json  pods_imagepull.json  pods_oom.json  pods_pending.json  pods_probe_fail.json  replicasets.json
tests/unit/: conftest_k8s.py  test_cadvisor_collector.py  test_change_point.py  test_cli.py  test_collectors_deploy.py  test_collectors_events.py  test_collectors_kube_api.py  test_collectors_logs.py  test_collectors_metrics_server.py  test_deepdive.py  test_gate.py  test_git_correlation.py  test_html_report.py  test_log_analysis.py  test_models.py  test_narrate.py  test_network_collector.py  test_rca_engine.py  test_rca_rules.py  test_regression_detection.py  test_timeline.py  test_topology.py  test_verification_store.py
