[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalpilot"
version = "0.1.0"
description = "PerfSage SignalPilot – Kubernetes performance & error RCA copilot"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=28.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "polars>=0.20.0",
    "pyarrow>=16.0.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "networkx>=3.3",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.4",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "drain3>=0.9.11",
    "gitpython>=3.1.43",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30.0", "anthropic>=0.28.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.1",
    "responses>=0.25.3",
]

[project.scripts]
signalpilot = "signalpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/signalpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/signalpilot"]
