[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfsage-signalpilot"
version = "1.0.0"
description = "PerfSage SignalPilot – Kubernetes performance & error RCA copilot"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["kubernetes", "rca", "sre", "observability", "postmortem", "devops"]
authors = [{ name = "Aashish Bajpai", email = "hello@perfsage.com" }]
dependencies = [
    "kubernetes>=28.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "networkx>=3.3",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.4",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "drain3>=0.9.11",
    "ruptures>=1.1.7",
    "gitpython>=3.1.43",
    "anyio>=4.4.0",
]

[project.urls]
Homepage = "https://perfsage.com/signalpilot/"
Documentation = "https://perfsage.com/signalpilot/"
Repository = "https://github.com/perfsage/signalpilot"
Issues = "https://github.com/perfsage/signalpilot/issues"
Changelog = "https://github.com/perfsage/signalpilot/blob/main/CHANGELOG.md"

[project.optional-dependencies]
llm = ["openai>=1.30.0", "anthropic>=0.28.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.1",
    "responses>=0.25.3",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
signalpilot = "signalpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/signalpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/signalpilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
